Add C# interop